--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "baas-waldo",
-  "homepage": "https://xrizwan.github.io/",
+  "homepage": "https://xrizwan.github.io/wheres-waldo/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
